tests/semantic/invalid/argument_errors/type.src
fn add(int a, int b) -> int {
    return a + b;
}

fn main() -> int {
    return add(5, "hello");
}
